[project]
name = "helius_py"
version = "1.0.0"
description = "Helius API Python wrapper"
authors = [
    { name="tanuki", email="rakutanuki777@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
